<?xml version="1.0"?>
<package format="2">
  <name>radar_slam</name>
  <version>0.1.0</version>
  <description>The radar_slam package</description>

  <maintainer email="nick.rotella@ainstein.ai">Nick Rotella</maintainer>

  <license>BSD</license>

  <url type="website">https://ainstein.ai/</url>
  <url type="repository">https://github.com/ainsteinai/radar_slam</url>
  <author email="nick.rotella@ainstein.ai">Nick Rotella</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>urdf</depend>

  <depend>roscpp</depend>
  <depend>ainstein_radar_msgs</depend>
  <depend>piksi_rtk_msgs</depend>
  <depend>car_data_interface</depend>
  
  <export>
  </export>

</package>
